Alignment fix

--- a/src/web/scss/components/buttons.scss
+++ b/src/web/scss/components/buttons.scss
@@ -82,7 +82,6 @@ a.button,
         margin-left: -$inuit-global-spacing-unit-tiny; /* 1 */
         margin-right: $inuit-global-spacing-unit-small; /* 1 */
         position: relative;
-        top: -1px;
         vertical-align: middle;
     }
 
